[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rna-clique"
version = "0.3.0a3"
authors = [
    { name = "Andrew Tapia", email = "andrew.tapia@uky.edu" }
]
description =  "Compute genetic distance matrices from RNA-seq data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm",
    "pandas",
    "joblib>=1.3.2",
    "networkx",
    "matplotlib",
    "seaborn",
    "scikit-bio",
    "tables",
    "biopython",
    "more-itertools",
    "dendropy",
    "pyyaml",
    "adjusttext",
    "numpy",
    "psutil",
    "sympy",
    "pysam",
    "nice-colorsys",
    "simple-blast>=0.7.9",
    "python-sat[aiger,approxmc,cryptosat,pblib]",
    "pyblast4_archive",
    "name_conflict_resolver",
    "multiset_key_dict"
]
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"

[project.urls]
"Homepage" = "https://github.com/actapia/rna_clique"
"Bug Tracker" = "https://github.com/actapia/rna_clique"

[project.scripts]
rna-clique = "rna_clique.rna_clique:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rna_clique", "rna_clique.docs", "rna_clique.viz"]
